Adicionando o style do info-perfil de css

--- a/linkedin/info-perfil.html
+++ b/linkedin/info-perfil.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/style-info-linkedin.css">
 </head>
+
 <body>
-    <section class="info-lateral-perfil">
-        <span>Idioma do perfil</span>
-        <p>Português</p>
-        <a href="https://www.linkedin.com/in/lucas-fernandes-930776235/edit/secondary-language/"><img src="https://via.placeholder.com/24x24"></a>
-        <hr>
-        <span>Perfil público e URL</span>
-        <p>www.linkedin.com/in/lucas-fernandes-930776235</p>
-        <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><img src="https://via.placeholder.com/24x24"></a>
-    </section>
+    <div class="container">
+        <section class="info-lateral-perfil">
+            <div class="item">
+                <span>Idioma do perfil</span>
+                <a href="https://www.linkedin.com/in/lucas-fernandes-930776235/edit/secondary-language/">
+                    <img src="https://via.placeholder.com/24x24">
+                </a>
+            </div>
+            <p>Português</p>
+            <hr>
+            <div class="item">
+                <span>Perfil público e URL</span>
+                <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">
+                    <img src="https://via.placeholder.com/24x24">
+                </a>
+            </div>
+            <p>www.linkedin.com/in/lucas-fernandes-930776235</p>
+        </section>
+    </div> 
 </body>
+
 </html>
