Adicionando a sugestão do css do site da amazon

--- a/amazon/menu-lateral.html
+++ b/amazon/menu-lateral.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu Hambúrguer CSS</title>
+    <link rel="stylesheet" href="/styles/menu-lateral.css">
 </head>
 <body>
     <nav>
-        <a href="#" class="btn-hamburguer"><img src="https://via.placeholder.com/78x39"></a>
+        <label for="menu-toggle" class="btn-hamburguer">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
     </nav>
     <section class="menu-lateral">
         <div class="conteudo-menu">
+            <h1>Funcionamento do botão em js</h1>
             <h3>Conteúdo digital e dispositivos</h3>
             <ul>
                 <li class="menu-item">Amazon Music</li>
@@ -23,15 +29,15 @@
                 <li class="menu-item">Computadores</li>
                 <li class="menu-item">Alexa Smart Home</li>
                 <li class="menu-item">Artes e artesanato</li>
-                <li class="menu-item"><a href="#" class="btn-hamburguer-comprimido">Ver tudo</a></li>
+                <li class="menu-item"><a href="#">Ver tudo</a></li>
             </ul>
-            <h3>PROGRAMAS E RECURSOS</h3>
+            <h3>Programas e Recursos</h3>
             <ul>
                 <li class="menu-item">Vales-Presente</li>
                 <li class="menu-item">Compre por interesse</li>
                 <li class="menu-item">Amazon Live</li>
                 <li class="menu-item">Compras Internacionais</li>
-                <li class="menu-item"><a href="#" class="btn-hamburguer-comprimido">Ver tudo</a></li>
+                <li class="menu-item"><a href="#">Ver tudo</a></li>
             </ul>
         </div>
     </section>
