Adicionando css para o apple footer

--- a/apple/footer-apple.html
+++ b/apple/footer-apple.html
@@ -5,117 +5,123 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/footer-apple-style.css">
 </head>
 
 <body>
     <footer>
-        <div class="coluna1">
-            <div class="coluna-section-descobrir-comprar">
-                <h3>Descobrir e Comprar</h3>
-                <ul>
-                    <li>Loja</li>
-                    <li>Mac</li>
-                    <li>iPad</li>
-                    <li>iPhone</li>
-                    <li>Watch</li>
-                    <li>AirPods</li>
-                    <li>TV e Casa</li>
-                    <li>AirTag</li>
-                    <li>Acessórios</li>
-                </ul>
+        <div class="container">
+            <div class="coluna">
+                <div class="coluna-section">
+                    <h3>Descobrir e Comprar</h3>
+                    <ul>
+                        <li>Loja</li>
+                        <li>Mac</li>
+                        <li>iPad</li>
+                        <li>iPhone</li>
+                        <li>Watch</li>
+                        <li>AirPods</li>
+                        <li>TV e Casa</li>
+                        <li>AirTag</li>
+                        <li>Acessórios</li>
+                    </ul>
+                </div>
+                <div class="coluna-section">
+                    <h3>Carteira da Apple</h3>
+                    <ul>
+                        <li>Carteira</li>
+                        <li>Apple Pay</li>
+                    </ul>
+                </div>
             </div>
-            <div class="coluna-section-carteira-apple">
-                <h3>Carteira da Apple</h3>
-                <ul>
-                    <li>Carteira</li>
-                    <li>Apple Pay</li>
-                </ul>
+            <div class="coluna">
+                <div class="coluna-section">
+                    <h3>Sua conta</h3>
+                    <ul>
+                        <li>Gerencie sua Conta Apple</li>
+                        <li>Conta da Apple Store</li>
+                    </ul>
+                </div>
+                <div class="coluna-section">
+                    <h3>Entretenimento</h3>
+                    <ul>
+                        <li>Apple One</li>
+                        <li>Apple TV+</li>
+                        <li>Apple Music</li>
+                        <li>Apple Arcade</li>
+                        <li>Apple Fitness+</li>
+                        <li>Apple Podcasts</li>
+                        <li>Apple Books</li>
+                        <li>App Store</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="coluna2">
-            <div class="coluna-section-sua-conta">
-                <h3>Sua conta</h3>
-                <ul>
-                    <li>Gerencie sua Conta Apple</li>
-                    <li>Conta da Apple Store</li>
-                </ul>
+            <div class="coluna">
+                <div class="coluna-section">
+                    <h3>Apple Store</h3>
+                    <ul>
+                        <li>Encontre uma loja</li>
+                        <li>Genius Bar</li>
+                        <li>Today at Apple</li>
+                        <li>Reservas para grupos</li>
+                        <li>Apple Camp</li>
+                        <li>App Apple Store</li>
+                        <li>Financiamento</li>
+                        <li>Programa de Reciclagem da Apple</li>
+                        <li>Status do seu pedido</li>
+                        <li>Ajuda para comprar</li>
+                    </ul>
+                </div>
             </div>
-            <div class="coluna-section-entretenimento">
-                <h3>Entretenimento</h3>
-                <ul>
-                    <li>Apple One</li>
-                    <li>Apple TV+</li>
-                    <li>Apple Music</li>
-                    <li>Apple Arcade</li>
-                    <li>Apple Fitness+</li>
-                    <li>Apple Podcasts</li>
-                    <li>Apple Books</li>
-                    <li>App Store</li>
-                </ul>
+            <div class="coluna">
+                <div class="coluna-section">
+                    <h3>Para Empresas</h3>
+                    <ul>
+                        <li>Apple e os negócios</li>
+                        <li>Comprar para a sua empresa</li>
+                    </ul>
+                </div>
+                <div class="coluna-section">
+                    <h3>Para a Educação</h3>
+                    <ul>
+                        <li>Apple e a Educação</li>
+                        <li>Comprar para Educação Básica</li>
+                        <li>Comprar para a faculdade</li>
+                    </ul>
+                </div>
+                <div class="coluna-section">
+                    <h3>Para a Saúde</h3>
+                    <ul>
+                        <li>Apple e a Saúde</li>
+                        <li>Saúde no Apple Watch</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="coluna3">
-            <div class="coluna-section-apple-store">
-                <h3>Apple Store</h3>
-                <ul>
-                    <li>Encontre uma loja</li>
-                    <li>Genius Bar</li>
-                    <li>Today at Apple</li>
-                    <li>Reservas para grupos</li>
-                    <li>Apple Camp</li>
-                    <li>App Apple Store</li>
-                    <li>Financiamento</li>
-                    <li>Programa de Reciclagem da Apple</li>
-                    <li>Status do seu pedido</li>
-                    <li>Ajuda para comprar</li>
-                </ul>
-            </div>
-            <div class="coluna-section-para-empresas">
-                <h3>Para Empresas</h3>
-                <ul>
-                    <li>Apple e os negócios</li>
-                    <li>Comprar para a sua empresa</li>
-                </ul>
-            </div>
-            <div class="coluna-section-educacao">
-                <h3>Para a Educação</h3>
-                <ul>
-                    <li>Apple e a Educação</li>
-                    <li>Comprar para Educação Básica</li>
-                    <li>Comprar para a faculdade</li>
-                </ul>
-            </div>
-            <div class="coluna-section-saude">
-                <h3>Para a Saúde</h3>
-                <ul>
-                    <li>Apple e a Saúde</li>
-                    <li>Saúde no Apple Watch</li>
-                </ul>
-            </div>
-            <div class="coluna-section-valores">
-                <h3>Valores da Apple</h3>
-                <ul>
-                    <li>Acessibilidade</li>
-                    <li>Educação</li>
-                    <li>Meio ambiente</li>
-                    <li>Privacidade</li>
-                    <li>Cadeia de fornecimento</li>
-                </ul>
-            </div>
-            <div class="coluna-section-sobre">
-                <h3>Sobre a Apple</h3>
-                <ul>
-                    <li>Newsroom</li>
-                    <li>Liderança da Apple</li>
-                    <li>Oportunidades de Carreira</li>
-                    <li>Investidores</li>
-                    <li>Ética e Compliance</li>
-                    <li>Eventos</li>
-                    <li>Contato</li>
-                </ul>
+            <div class="coluna">
+                <div class="coluna-section">
+                    <h3>Valores da Apple</h3>
+                    <ul>
+                        <li>Acessibilidade</li>
+                        <li>Educação</li>
+                        <li>Meio ambiente</li>
+                        <li>Privacidade</li>
+                        <li>Cadeia de fornecimento</li>
+                    </ul>
+                </div>
+                <div class="coluna-section">
+                    <h3>Sobre a Apple</h3>
+                    <ul>
+                        <li>Newsroom</li>
+                        <li>Liderança da Apple</li>
+                        <li>Oportunidades de Carreira</li>
+                        <li>Investidores</li>
+                        <li>Ética e Compliance</li>
+                        <li>Eventos</li>
+                        <li>Contato</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </footer>
 </body>
-
 </html>
